--- a/data-clean.ipynb
+++ b/data-clean.ipynb
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1918,31 +1918,48 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[31]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mgdp_df\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m5\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mastype\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43msplit\u001b[49m()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mgdp_df\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m5\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mastype\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43msplit\u001b[49m()\n",
       "\u001b[31mAttributeError\u001b[39m: 'Index' object has no attribute 'split'"
      ]
     }
    ],
    "source": [
-    "gdp_df.columns[5:].astype('str').split()\n"
+    "gdp_df.columns[5:].astype(str).split()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Series Name', 'Series Code', 'Country Name', 'Country Code', '2000',\n",
+       "       '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009',\n",
+       "       '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018',\n",
+       "       '2019', '2020', '2021', '2022', '2023'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "gdp_df = gdp_df.rename(columns={\n",
-    "    'Country Name': 'CountryName', \n",
-    "    'Country Code': 'CountryCode', \n",
-    "    'Series Name': 'SeriesName',\n",
-    "    'Year': 'Year', \n",
-    "})\n",
+    "# gdp_df = gdp_df.rename(columns={\n",
+    "#     'Country Name': 'CountryName', \n",
+    "#     'Country Code': 'CountryCode', \n",
+    "#     'Series Name': 'SeriesName',\n",
+    "#     'Year': 'Year', \n",
+    "# })\n",
     "\n",
     "\n",
-    "for col in gdp_df.columns[5:]:\n",
-    "    gdp_df[col] = gdp_df[]\n",
+    "for col in gdp_df.columns[4:]:\n",
+    "    gdp_df = gdp_df.rename(columns={col: col.split(' ')[0]})\n",
+    "\n",
+    "gdp_df.columns\n",
     "    "
    ]
   },
@@ -1975,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1984,13 +2001,14 @@
        "pandas.core.indexes.base.Index"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(gdp_df.columns[5:])\n"
+    "type(gdp_df.columns)\n",
+    "\n"
    ]
   },
   {
