--- a/data-clean.ipynb
+++ b/data-clean.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "4  2024-10-28T07:00:00.000Z  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "4          0.70           0.94   0.81 [0.7-0.94]  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "4           AMR               Americas  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,16 +621,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# country_clean.to_csv('data/country.csv', index=False)"
+    "country_clean.to_csv('data/country.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0 [0-0]</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -679,7 +679,7 @@
        "      <td>0.35</td>\n",
        "      <td>0.27</td>\n",
        "      <td>0.44</td>\n",
-       "      <td>0.35 [0.27-0.44]</td>\n",
+       "      <td>0.17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -688,7 +688,7 @@
        "      <td>0.71</td>\n",
        "      <td>0.61</td>\n",
        "      <td>0.82</td>\n",
-       "      <td>0.71 [0.61-0.82]</td>\n",
+       "      <td>0.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -697,7 +697,7 @@
        "      <td>0.80</td>\n",
        "      <td>0.68</td>\n",
        "      <td>0.92</td>\n",
-       "      <td>0.8 [0.68-0.92]</td>\n",
+       "      <td>0.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -706,22 +706,22 @@
        "      <td>0.81</td>\n",
        "      <td>0.70</td>\n",
        "      <td>0.94</td>\n",
-       "      <td>0.81 [0.7-0.94]</td>\n",
+       "      <td>0.24</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  CountryCode  Year  Incidence  IncidenceLow  IncidenceHigh    IncidenceRange\n",
-       "0         SMR  2023       0.00          0.00           0.00           0 [0-0]\n",
-       "1         PSE  2023       0.35          0.27           0.44  0.35 [0.27-0.44]\n",
-       "2         PRI  2023       0.71          0.61           0.82  0.71 [0.61-0.82]\n",
-       "3         ARE  2023       0.80          0.68           0.92   0.8 [0.68-0.92]\n",
-       "4         BRB  2023       0.81          0.70           0.94   0.81 [0.7-0.94]"
+       "  CountryCode  Year  Incidence  IncidenceLow  IncidenceHigh  IncidenceRange\n",
+       "0         SMR  2023       0.00          0.00           0.00            0.00\n",
+       "1         PSE  2023       0.35          0.27           0.44            0.17\n",
+       "2         PRI  2023       0.71          0.61           0.82            0.21\n",
+       "3         ARE  2023       0.80          0.68           0.92            0.24\n",
+       "4         BRB  2023       0.81          0.70           0.94            0.24"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1954,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1963,7 +1963,7 @@
        "(5208, 53)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2048,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2146,7 +2146,7 @@
        "4               95138.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2167,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2191,7 +2191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
